# glfw_task

./: CMakeLists.txt  README.md  main.cpp
glad/: glad.c  glad.h
